--- a/css/5_fuentes_personalizadas.html
+++ b/css/5_fuentes_personalizadas.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=BBH+Bartle&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="5_fuentes_personalizadas.css">
+    <title>Fuentes personalizadas</title>
 </head>
+
 <body>
-    
+    <h1>Fuentes personalizadas</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.</p>
+
 </body>
+
 </html>
