Posicionamientos(relative, absolute, fixed, sticky), Propiedad float, z-index, y la propiedad overflow css)

--- a/css/22_float.html
+++ b/css/22_float.html
@@ -65,7 +65,7 @@
         neque assumenda! Ipsum non quis quos dolorem nesciunt aliquam similique
         ipsa recusandae delectus hic, blanditiis culpa, tenetur, quae atque
         error sit. Quos explicabo accusantium reiciendis sapiente ex consequatur
-        perspiciatis! Blanditiis odio facere ipsa tempore quidem.
+        perspiciatis! Blanditiis odio .facere ipsa tempore quidem.
       </p>
     </div>
   </body>
