--- a/css/23_z_index.html
+++ b/css/23_z_index.html
@@ -10,6 +10,7 @@
     <div class="caja caja-1">Caja 1</div>
     <div class="caja caja-2">Caja 2</div>
     <div class="caja caja-3">Caja 3</div>
+    <p>Z-INDEX: nos va a permitir controlar el orden de capas de los elementos posicionados</p>
     
 </body>
 </html>
