--- a/proyects/Startup/index.html
+++ b/proyects/Startup/index.html
@@ -87,6 +87,25 @@
       </div>
 
       <div class="col-2">
+        <div class="slideshow"> <!--Contenedor donde va a tener el carrusel de imagenes e indicadores-->
+          <div class="slides">
+            <div class="slide">
+              <img src="./public/assets/img/1.png" alt="">
+            </div>
+            <div class="slide">
+              <img src="./public/assets/img/2.png" alt="">
+            </div>
+            <div class="slide">
+              <img src="./public/assets/img/3.png" alt="">
+            </div>
+          </div>
+          <div class="indicadores">
+            <button class="indicador active"></button>
+            <button class="indicador"></button>
+            <button class="indicador"></button>
+          </div>
+
+        </div>
       </div>
 
     </div>
