--- a/JavaScript/introduction/index.html
+++ b/JavaScript/introduction/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="holaMundo.css">
     <title>Curso de Javascript</title>
-    <script defer src="5_arreglos.js"></script>
+    <script defer src="9_operadorTernario.js"></script>
 </head>
 <body>
     <h1>Curso de JavaScript</h1>
