Agregar sección de footer en index.html y nuevos estilos en footer.css y precios.css. Se actualizaron las importaciones en main.js para incluir las nuevas hojas de estilo.

--- a/proyects/Startup/index.html
+++ b/proyects/Startup/index.html
@@ -130,7 +130,9 @@
 
 
   <div class="contenedor">
+
     <main>
+
       <section class="caracteristicas">
         <h2 class="titulo-caracteristicas">Características</h2>
         <div class="grid">
@@ -259,7 +261,7 @@
 
           </div>
 
-          <div class="plan">
+          <div class="plan destacado">
             <h3 class="nombre">Personal</h3>
             <p class="precio">$10 <span>USD / mes</span></p>
             <p class="descripcion">Plan personal para proyectos pequeños.</p>
@@ -299,7 +301,7 @@
           </div>
 
           <div class="plan">
-            <h3 class="nombre">Intro</h3>
+            <h3 class="nombre">Profesional</h3>
             <p class="precio">$15 <span>USD / mes</span></p>
             <p class="descripcion">Plan para proyectos profecionales y comerciales.</p>
 
@@ -337,7 +339,7 @@
 
           </div>
           <div class="plan">
-            <h3 class="nombre">Intro</h3>
+            <h3 class="nombre">Ultimate</h3>
             <p class="precio">$30 <span>USD / mes</span></p>
             <p class="descripcion">Plan para equipos y proyectos enterprise.</p>
 
@@ -381,6 +383,21 @@
       </section>
 
     </main>
+
+    <footer class="footer">
+      <div class="logo">
+        <img src="./public/assets/img/logo.svg" alt="">
+        <p>2026 Trace Todos los derechos reservados.</p>
+      </div>
+      <nav class="links">
+        <a href="#">Términos y Condiciones</a>
+        <a href="#">Política de Privacidad</a>
+        <a href="#">Trabajos</a>
+        <a href="#">Soporte & Ayuda</a>
+      </nav>
+
+
+    </footer>
   </div>
 
 
