Agregar archivos de introducción a funciones en JavaScript, incluyendo ejemplos de declaración de funciones, parámetros, argumentos, y el uso de la sentencia return. Se introdujeron conceptos de scope global, local y de bloque. Se actualizó index.html para referenciar el nuevo archivo de funciones.

--- a/JavaScript/introduction/index.html
+++ b/JavaScript/introduction/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="holaMundo.css">
     <title>Curso de Javascript</title>
-    <script defer src="9_operadorTernario.js"></script>
+    <script defer src="15_scopeBloque.js"></script>
 </head>
 <body>
     <h1>Curso de JavaScript</h1>
     <h2>Completo, Practico y desde cero!!!</h2>
+
+    <!-- FORMA PARA EJECUTAR UNA FUNCION DE JS A HTML EN UN BOTON. -->
+    <!-- <button onclick="saludar()">Saludo</button> -->
     
     
 </body>
