Agregar archivos de introducción a métodos de arreglos en JavaScript, incluyendo ejemplos de propiedades y métodos como .length, .toString(), .join(), .sort(), .reverse(), .concat(), .push(), .pop(), .shift(), .unshift(), .splice(), .slice(), .indexOf(), .lastIndexOf(), .forEach(), .find(), .map() y .filter(). Se actualizó index.html para referenciar el nuevo archivo de métodos de arreglos.

--- a/JavaScript/introduction/index.html
+++ b/JavaScript/introduction/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="holaMundo.css">
     <title>Curso de Javascript</title>
-    <script defer src="15_scopeBloque.js"></script>
+    <script defer src="17_metodosParaArreglos2.js"></script>
 </head>
 <body>
     <h1>Curso de JavaScript</h1>
