Agregar nuevas funcionalidades para manipulación de elementos en el DOM, incluyendo la creación y eliminación de cajas, así como la modificación de estilos mediante clases e inline styles. Se actualizó index.html para referenciar el nuevo archivo de estilos y se configuró el puerto del servidor en settings.json.

--- a/JavaScript/DOM/index.html
+++ b/JavaScript/DOM/index.html
@@ -5,7 +5,7 @@
                 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
                 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
                 <link rel="stylesheet" href="./styles.css" />
-                <script defer src="./creandoElementos.js"></script>
+                <script defer src="./modificandoEstilosMedianteInlineStyles.js"></script>
                 <title>Curso de Javascript</title>
         </head>
         <body>
@@ -23,7 +23,18 @@
                         <div class="caja">Caja 3</div>
                     </div>
                     <!-- atributo onclick para que cuando haga clic, se ejecute la funcion agregarCaja() -->
-                    <button onclick="agregarCaja()">Agregar Caja</button>
+                    <!-- <button onclick="agregarClase()">Agregar Class</button>
+                    <button onclick="eliminarClase()">Eliminar Class</button>
+                    <button onclick="toggleClase()">Toggle Class </button>
+                    <button onclick="comprobarClase()">Comprobar Class</button> -->
+
+                    <button onclick="incrementarFuente()">Incrementar Fuente</button>
+                    <button onclick="decrementarFuente()">Decrementar Fuente</button>
+
+
+
+
+
                 </div>
         </body>
 </html>
