--- a/JavaScript/DOM/index.html
+++ b/JavaScript/DOM/index.html
@@ -5,7 +5,7 @@
                 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
                 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
                 <link rel="stylesheet" href="./styles.css" />
-                <script defer src="./modificandoEstilosMedianteInlineStyles.js"></script>
+                <script defer src="eventos/eliminarEventos.js"></script>
                 <title>Curso de Javascript</title>
         </head>
         <body>
@@ -28,8 +28,14 @@
                     <button onclick="toggleClase()">Toggle Class </button>
                     <button onclick="comprobarClase()">Comprobar Class</button> -->
 
-                    <button onclick="incrementarFuente()">Incrementar Fuente</button>
-                    <button onclick="decrementarFuente()">Decrementar Fuente</button>
+                    <!-- <button onclick="incrementarFuente()">Incrementar Fuente</button>
+                    <button onclick="decrementarFuente()">Decrementar Fuente</button> -->
+
+
+                    <!-- <button id="boton1">Toggle Class </button> -->
+
+                    <button id="boton1">Agregar Evento</button>
+                    <button id="boton2">Eliminar Evento</button>
 
 
 
